# HaishinKit.kt

./: .editorconfig  .gitignore  .gitmodules  Dangerfile  Gemfile  LICENSE.md  README.md  build.gradle  build.gradle.kts  gradle.properties  jitpack.yml  local.properties  qodana.yaml  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: android.yml  quoana.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
commons/: build.gradle  proguard-rules.pro
commons/src/main/: AndroidManifest.xml
compose/: build.gradle  build.gradle.kts  module-docs.md
docs/: index.html  navigation.html  package-list
docs/compose/: index.html  navigation.html
docs/compose/com.haishinkit.compose/: -haishin-kit-view.html  index.html  remember-connection-state.html  remember-recorder-state.html  remember-stream-state.html
docs/haishinkit/: index.html  navigation.html  package-list
docs/haishinkit/com.haishinkit.amf/: index.html
docs/haishinkit/com.haishinkit.amf.data/: index.html
docs/haishinkit/com.haishinkit.codec/: index.html
docs/haishinkit/com.haishinkit.codec.util/: index.html
docs/haishinkit/com.haishinkit.data/: index.html
docs/haishinkit/com.haishinkit.event/: index.html
docs/haishinkit/com.haishinkit.events/: index.html
docs/haishinkit/com.haishinkit.flv/: index.html
docs/haishinkit/com.haishinkit.flv.tag/: index.html
docs/haishinkit/com.haishinkit.gles/: index.html
docs/haishinkit/com.haishinkit.gles.renderer/: index.html
docs/haishinkit/com.haishinkit.graphics/: index.html
docs/haishinkit/com.haishinkit.graphics.effect/: index.html
docs/haishinkit/com.haishinkit.graphics.filter/: index.html
docs/haishinkit/com.haishinkit.graphics.glsl/: index.html
docs/haishinkit/com.haishinkit.iso/: index.html
docs/haishinkit/com.haishinkit.lang/: decode-hex.html  index.html
docs/haishinkit/com.haishinkit.media/: index.html
docs/haishinkit/com.haishinkit.media.camera2/: index.html
docs/haishinkit/com.haishinkit.media.util/: index.html
docs/haishinkit/com.haishinkit.metric/: index.html
docs/haishinkit/com.haishinkit.metrics/: index.html
docs/haishinkit/com.haishinkit.net/: index.html
docs/haishinkit/com.haishinkit.rtmp/: index.html
docs/haishinkit/com.haishinkit.screen/: index.html
docs/haishinkit/com.haishinkit.util/: aspect-ratio.html  index.html  swap.html
docs/haishinkit/com.haishinkit.view/: index.html
docs/lottie/: index.html  navigation.html
docs/scripts/: navigation-pane.json  pages.js  pages.json  sourceset_dependencies.js
docs/vulkan/: index.html  navigation.html
fastlane/: Fastfile
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
haishinkit/: build.gradle  build.gradle.kts  module-docs.md  proguard-rules.pro
haishinkit/src/main/cpp/: CMakeLists.txt
haishinkit/src/main/cpp/Graphics/: ColorSpace.cpp  ColorSpace.h  CommandBuffer.cpp  CommandBuffer.h  DynamicLoader.cpp  DynamicLoader.h  ImageStorage.cpp  Kernel.cpp  Kernel.h  Pipeline.cpp  PixelTransform.cpp  PixelTransform.h  Queue.cpp  ResampleFilter.h  SurfaceRotation.hpp  SwapChain.cpp  Texture.cpp  Texture.h  Util.cpp  VideoGravity.h
haishinkit/src/main/cpp/Graphics/Feature/: DebugUtilsMessengerFeature.cpp  DebugUtilsMessengerFeature.h  Feature.cpp  Feature.h  FeatureManager.cpp  FeatureManager.h
haishinkit/src/main/cpp/Vulkan/: Buffer.cpp  Buffer.h  ColorSpace.cpp  ColorSpace.h  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Context.h  DynamicLoader.cpp  DynamicLoader.h  ImageStorage.cpp  ImageStorage.h  Kernel.cpp  Kernel.h  Pipeline.cpp  Pipeline.h  PixelTransform.cpp  PixelTransform.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  ResampleFilter.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Util.cpp  Util.h  VideoGravity.h
lottie/: build.gradle  build.gradle.kts  module-docs.md
scripts/: compare.rb  unarchive-zip.rb
vulkan/: CMakeLists.txt  build.gradle  build.gradle.kts  module-docs.md
vulkan/src/androidTest/java/com/haishinkit/vulkan/: ExampleInstrumentedTest.kt
vulkan/src/main/: AndroidManifest.xml
vulkan/src/main/cpp/: Unmanaged.hpp  haishinkit.hpp
vulkan/src/main/cpp/Binding/: Class.cpp  Class.h  Method.cpp  Method.h  Object.cpp  Object.h  ShaderStage.cpp  ShaderStage.h  Uniform.cpp  Uniform.h  VisualEffect.cpp  VisualEffect.h
vulkan/src/main/cpp/Graphics/: ColorSpace.cpp  ColorSpace.h  CommandBuffer.cpp  CommandBuffer.h  DynamicLoader.cpp  FpsController.cpp  FpsController.h  ImageOrientation.h  ImageReader.cpp  ImageReader.h  ImageStorage.cpp  ImageStorage.h  Kernel.cpp  Kernel.h  Pipeline.cpp  Pipeline.h  PixelTransform.cpp  PixelTransform.h  PushConstants.hpp  Queue.cpp  Queue.h  ResampleFilter.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Util.h  Vertex.hpp  VideoEffect.cpp  VideoEffect.h  VideoGravity.h
vulkan/src/main/cpp/Graphics/Feature/: DebugUtilsMessengerFeature.cpp  Feature.h  FeatureManager.cpp  PhysicalDeviceFeature.cpp  PhysicalDeviceFeature.h  PhysicalDeviceSamplerYcbcrConversionFeature.cpp  PhysicalDeviceSamplerYcbcrConversionFeature.h
vulkan/src/main/java/com/haishinkit/vulkan/: VkPixelTransform.kt
vulkan/src/main/shaders/: bicubic.frag  bilinear.frag  default.frag  default.vert  lanczos.frag  lanczos.vert  monochrome.frag  mosaic.frag  sepia.frag
vulkan/src/test/java/com/haishinkit/vulkan/: ExampleUnitTest.kt
(+2760 files in other folders)
